Add params to activity

--- a/ElsaAPI/appsettings.json
+++ b/ElsaAPI/appsettings.json
@@ -13,6 +13,10 @@
     "Server": {
       "BaseUrl": "http://localhost:5264",
       "BasePath": "/workflows"
+    },
+    "Smtp": {
+      "Host": "localhost",
+      "Port": "2525"
     }
   }
 }
