--- a/ElsaAPI/ElsaAPI.csproj
+++ b/ElsaAPI/ElsaAPI.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Elsa" Version="2.8.2" />
     <PackageReference Include="Elsa.Activities.Http" Version="2.8.2" />
     <PackageReference Include="Elsa.Persistence.EntityFramework.Core" Version="2.8.2" />
+    <PackageReference Include="Elsa.Scripting.Liquid" Version="2.8.2" />
     <PackageReference Include="Elsa.Server.Api" Version="2.8.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.8" />
